--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@
 
 .top_cart_page{
     background-color: lightblue;
-    height:200px;
+    height:100px;
 }
 
 .top_cart_wrapper{
@@ -124,26 +124,95 @@
     align-content: center;
 }
 .cost{
-    background-color: lightgrey;
-    height: 100px;
-    width: 300px;
-    margin-top: 50px;
-    margin-left: 50px;
-    font-size: 30px;
+    background-color: white;
+    height: 50px;
+    width: 250px;
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 20px;
+    border-radius: 5px;
 }
 .cost p{
-    margin-top:34px;
-    margin-left:25px;
+    margin-top: 15px;
+    margin-left: 10px;
 }
 
 .pay_now button{
-    height: 50px;
-    width:200px;
-    margin-top: 50px;
-    margin-right: 50px;
+    height: 40px;
+    width:130px;
+    margin-top: 30px;
+    margin-right: 30px;
     font-size: 20px;
+    border-radius: 5px;
 }
 
 .bottom_cart_page{
-    
+    background-color: lightblue;
+    height: 655px;
+}
+
+.cart{
+    background-color: white;
+    margin-left: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 10px;
+    height: 635px;
+}
+
+.header_wrapper{
+    display:flex;
+    justify-content: space-between;
+}
+
+.title{
+    margin-top: 20px;
+    margin-left: 30px;
+    font-size: 25px;
+}
+
+.remove_all{
+    margin-top: 20px;
+    margin-right: 20px;
+    font-size: 15px;
+    height: 25px;
+    width: 85px;
+}
+
+.cart_item{
+    margin: auto;
+    display:flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    align-items: center;
+}
+
+.game_image img{
+    width: 300px;
+    height: 170px;
+}
+
+.details{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.counter{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.counter p{
+    font-size: 20px;
+}
+
+.counter button{
+    font-size: 15px;
+    height: 20px;
+    width: 15px;
+}
+
+.price{
+    font-size: 25px;
 }
