--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,37 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.navigation_bar{
-    background-color: whitesmoke;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    font-size: 3.0rem;
-    position: sticky;
+.icon{
+    font-size:60px;
+    color:lightblue;
+    text-shadow:2px 2px 4px #000000;
 }
+.navbar {
+    overflow: hidden;
+    background-color: white;
+    margin:0px;
+  }
 
-.navigation_bar_container{
+  .navbar .block{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    width: 100%;
-    color: aqua;
-}
+  }
+  
+  .navbar a :hover, .block:hover .block-info:hover  { 
+    background: red;
+  }
+  
+  .navbar .block .block-info a{
+    float: left; 
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 16px 18px;
+    text-decoration: none;
+  }
+  
+
+
 
 .homepage_tab{
     background: lightblue;
