--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@
     margin: auto;
     margin-top: 50px;
     text-align: center;
-    height: 300px;
+    height: 320px;
     width: 500px;
 }
 
@@ -113,6 +113,13 @@
     opacity: 0.7;
 }
 
+.product_card img{
+    height: 170px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 280px;
+}
 .top_cart_page{
     background-color: lightblue;
     height:100px;
@@ -215,4 +222,63 @@
 
 .price{
     font-size: 25px;
+}
+
+.top_rewards_page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.exp_bar{
+    background-color: whitesmoke;
+    width: 80%;
+    height: 40px;
+    margin-top: 35px;
+    margin-left:0;
+}
+
+.level{
+    background-color: greenyellow;
+    height: 40px;
+    width: 9%;
+    font-size: 30px;
+    text-justify: center;
+    text-align: center;
+}
+
+.exp_needed{
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+.bottom_rewards_page{
+    display: flex;
+    justify-content: space-between;
+    background-color: blueviolet;
+    height: 646px;
+}
+
+.perks{
+    margin-top:30px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    background-color: aqua;
+}
+
+.table, td{
+    border: 1px solid;
+    font-size: 100px;
+}
+
+.info_guide{
+    background-color: aquamarine;
+    margin-top:30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    font-size: 20px;
+}
+.info_guide p{
+    margin: 20px;
 }
