--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,17 @@
     overflow: hidden;
     background-color: white;
     margin:0px;
-  }
+}
 
-  .navbar .block{
+.navbar .block{
     display: flex;
-  }
+}
   
-  .navbar a :hover, .block:hover .block-info:hover  { 
+.navbar a :hover, .block:hover .block-info:hover  { 
     background: red;
-  }
+}
   
-  .navbar .block .block-info a{
+.navbar .block .block-info a{
     float: left; 
     font-size: 30px;
     font-weight: bold;
@@ -32,7 +32,7 @@
     text-align: center;
     padding: 16px 18px;
     text-decoration: none;
-  }
+}
   
 
 
@@ -295,4 +295,51 @@
 }
 .info_guide p{
     margin: 20px;
+}
+
+.flex-storage{
+    display: flex;
+    width:100%;
+    list-style: none;
+    flex-direction: column-reverse;
+    justify-content: center;
+    border-top:10px;
+    border-bottom:10px;
+    border-left:0;
+    border-right:0;
+    border-color:darkmagenta;
+    border-style:solid;    
+    
+}
+.flex-item{
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(70, 2, 70);
+    border-bottom: 10px;
+    border-color: rgb(70, 2, 70);
+    color: black;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width:100%;
+}
+
+  
+.title_pos{
+    color: white;
+    background-color:rgb(70, 2, 70);
+    width: 60%;
+    padding-left:20px;
+    text-align: left;
+}
+.img_pos{
+    width: 40%;
+    text-align: center;
+}
+  
+.flex-item img{
+    width:60%;
 }
