--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
+
+
 .icon{
     font-size:60px;
     color:lightblue;
@@ -32,4 +35,96 @@
     text-align: center;
     padding: 16px 18px;
     text-decoration: none;
+}
+
+
+
+
+
+.flex-storage{
+    display: flex;
+    width:100%;
+    list-style: none;
+    flex-direction: column-reverse;
+    border-color:darkmagenta;
+    border-style:solid;    
+    
+}
+.flex-item{
+    display: flex;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(70, 2, 70);
+    border-color: rgb(70, 2, 70);
+    color: black;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width:100%;
+}
+.signup-button{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: normal;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(36, 158, 196);
+    border-bottom: 10px;
+    border-color: rgb(36, 158, 196);
+    color: black;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width:100%;
+}
+.login-button{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: normal;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(36, 158, 196);
+    border-bottom: 10px;
+    border-color: rgb(36, 158, 196);
+    color: black;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width:100%;
+}
+
+
+
+.homepage_tab{
+    background: lightblue;
+    display: flex;
+    flex-direction: column;
+    height: 737px;
+    justify-content: center;
+}
+
+.homepage_tab_wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.homepage_tab_card{
+    margin: 10px;
+    height: 425px;
+    width: 300px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    background-color: whitesmoke;
+}
+
+.homepage_tab_card a{
+    text-align: center;
 }
