--- a/rewards.css
+++ b/rewards.css
@@ -33,3 +33,65 @@
     padding: 16px 18px;
     text-decoration: none;
 }
+
+
+
+
+.top_rewards_page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.exp_bar{
+    background-color: whitesmoke;
+    width: 80%;
+    height: 40px;
+    margin-top: 35px;
+    margin-left:0;
+}
+
+.level{
+    background-color: greenyellow;
+    height: 40px;
+    width: 9%;
+    font-size: 30px;
+    text-justify: center;
+    text-align: center;
+}
+
+.exp_needed{
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+.bottom_rewards_page{
+    display: flex;
+    justify-content: space-between;
+    background-color: blueviolet;
+    height: 300px;
+}
+
+.perks{
+    margin-top:30px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    background-color: aqua;
+}
+
+.table, td{
+    border: 1px solid;
+    font-size: 100px;
+}
+
+.info_guide{
+    background-color: aquamarine;
+    margin-top:30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    font-size: 20px;
+}
+.info_guide p{
+    margin: 20px;
+}
