--- a/cart.css
+++ b/cart.css
@@ -33,3 +33,107 @@
     padding: 16px 18px;
     text-decoration: none;
 }
+
+.top_cart_page{
+    background-color: lightblue;
+    height:100px;
+}
+
+.top_cart_wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+.cost{
+    background-color: white;
+    height: 50px;
+    width: 250px;
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 20px;
+    border-radius: 5px;
+}
+.cost p{
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+.pay_now button{
+    height: 40px;
+    width:130px;
+    margin-top: 30px;
+    margin-right: 30px;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+.bottom_cart_page{
+    background-color: lightblue;
+    height: 655px;
+}
+
+.cart{
+    background-color: white;
+    margin-left: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 10px;
+    height: 635px;
+}
+
+.header_wrapper{
+    display:flex;
+    justify-content: space-between;
+}
+
+.title{
+    margin-top: 20px;
+    margin-left: 30px;
+    font-size: 25px;
+}
+
+.remove_all{
+    margin-top: 20px;
+    margin-right: 20px;
+    font-size: 15px;
+    height: 25px;
+    width: 85px;
+}
+
+.cart_item{
+    margin: auto;
+    display:flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    align-items: center;
+}
+
+.game_image img{
+    width: 300px;
+    height: 170px;
+}
+
+.details{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.counter{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.counter p{
+    font-size: 20px;
+}
+
+.counter button{
+    font-size: 15px;
+    height: 20px;
+    width: 15px;
+}
+
+.price{
+    font-size: 25px;
+}
