--- a/products.css
+++ b/products.css
@@ -33,3 +33,68 @@
     padding: 16px 18px;
     text-decoration: none;
 }
+
+.product_page{
+    background: lightblue;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.search_bar input[type=text]{
+    float: left;
+    padding: 6px;
+    border: none;
+    margin-top: 50px;
+    margin-left: 50px;
+    font-size: 30px;
+    width: 650px;
+}
+
+.product_wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+
+}
+
+.product_card{
+    background-color: aquamarine;
+    max-width: 300px;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+    height: 320px;
+    width: 500px;
+}
+
+.price {
+    color: grey;
+    font-size: 35px;
+}
+  
+.product_card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: grey;
+    text-align: center;
+    cursor: pointer;
+    width: 70%;
+    font-size: 25px;
+}
+  
+.product_card button:hover {
+    opacity: 0.7;
+}
+
+.product_card img{
+    height: 170px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 280px;
+}
