--- a/index.css
+++ b/index.css
@@ -7,12 +7,8 @@
 
 
 
+/*navigation bar*/
 
-.icon{
-    font-size:60px;
-    color:lightblue;
-    text-shadow:2px 2px 4px #000000;
-}
 .navbar {
     overflow: hidden;
     background-color: white;
@@ -23,7 +19,7 @@
     display: flex;
 }
   
-.navbar a :hover, .block:hover .block-info:hover  { 
+.navbar a :hover, .block:hover .block-info:hover , .block-info-right:hover, .icon-info a :hover{ 
     background: red;
 }
   
@@ -37,62 +33,111 @@
     text-decoration: none;
 }
 
-
-
-
-
-.flex-storage{
-    display: flex;
-    width:100%;
-    list-style: none;
-    flex-direction: column-reverse;
-    border-color:darkmagenta;
-    border-style:solid;    
-    
+.navbar .block .block-right{
+    float: right; 
+    padding-right:200px ;
 }
-.flex-item{
-    display: flex;
-    font-size: 50px;
-    font-weight: bolder;
-    list-style: none;
-    text-align: left;
-    background-color: rgb(70, 2, 70);
-    border-color: rgb(70, 2, 70);
-    color: black;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    width:100%;
-}
-.signup-button{
-    display: flex;
-    justify-content: center;
+
+.navbar .block .block-info-right a{     
+    float: left; 
     font-size: 20px;
-    font-weight: normal;
-    list-style: none;
-    text-align: left;
-    background-color: rgb(36, 158, 196);
-    border-bottom: 10px;
-    border-color: rgb(36, 158, 196);
+    font-weight: bold;
     color: black;
-    padding-top: 75px;
-    padding-bottom: 75px;
-    width:100%;
+    text-align: center;
+    padding: 24px 20px;
+    text-decoration: none;
+    padding-left: 100px;
 }
-.login-button{
-    display: flex;
+
+.icon-info{
+    float: left; 
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 6px 6px;
+    text-decoration: none;
+}
+
+
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 230px;
+    right: 280px;
+    width: 280px;
+  }
+  
+/* The login popup */
+.login-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
     justify-content: center;
-    font-size: 20px;
-    font-weight: normal;
-    list-style: none;
-    text-align: left;
-    background-color: rgb(36, 158, 196);
-    border-bottom: 10px;
-    border-color: rgb(36, 158, 196);
-    color: black;
-    padding-top: 75px;
-    padding-bottom: 75px;
-    width:100%;
+    z-index: 8;
 }
+
+/*The sign up popup*/
+.signup-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    z-index: 5;
+}
+  
+
+.form-container {
+    max-width: 600px;
+    padding: 100px;
+    background-image: url(https://awcdn.hawkdive.com/media/WhatsApp-Image-2022-03-26-at-2.28.43-PM-2.jpeg);
+    justify-content: center;
+    margin-bottom: 250px;
+    margin-left: 550px;
+    color: #f1f1f1;
+}
+  
+
+.form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+  
+
+.form-container .btn {
+    background-color: rgb(26, 218, 58);
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+}
+  
+.form-container .cancel {
+    background-color: red;
+}
+  
+
+.form-container .btn:hover, .open-button:hover {
+    opacity: 100;
+}
+
+
+
+
+
 
 
 
