--- a/products.css
+++ b/products.css
@@ -38,7 +38,7 @@
     background: lightblue;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 1500px;
 }
 
 .search_bar input[type=text]{
@@ -53,8 +53,8 @@
 
 .product_wrapper{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr ;
     align-items: center;
     justify-items: center;
 
@@ -62,29 +62,43 @@
 
 .product_card{
     background-color: aquamarine;
-    max-width: 300px;
     margin: auto;
     margin-top: 50px;
     text-align: center;
-    height: 320px;
-    width: 500px;
+    height: 400px;
+    width: 360px;
+    align-content: center;
 }
 
+.product_card h1{
+    margin-top: 7px;
+    height: 40px;
+    font-size: 28px;
+}
+
+.product_card p{
+    margin-bottom: 10px;
+    font-size: 20px;
+    height: 50px;
+    margin-top: 5px;
+}
 .price {
     color: grey;
-    font-size: 35px;
+    height: 40px;
+    font-size: 29px;
 }
   
 .product_card button {
     border: none;
     outline: 0;
-    padding: 12px;
+    padding: 7px;
     color: white;
     background-color: grey;
     text-align: center;
     cursor: pointer;
-    width: 70%;
+    width: 65%;
     font-size: 25px;
+    margin: auto;
 }
   
 .product_card button:hover {
@@ -92,9 +106,8 @@
 }
 
 .product_card img{
-    height: 170px;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    width: 280px;
+    height: 182px;
+    margin: auto;
+    width: 320px;
+    margin-top: 10px;
 }
