--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@
     padding: 24px 20px;
     text-decoration: none;
     padding-left: 100px;
+    cursor: pointer;
 }
 
 .navbar .block .block-profile a{     
