--- a/rewards.css
+++ b/rewards.css
@@ -47,6 +47,7 @@
     padding: 24px 20px;
     text-decoration: none;
     padding-left: 100px;
+    cursor: pointer;
 }
 
 .navbar .block .block-profile a{     
@@ -152,51 +153,102 @@
 
 
 
-.rewards_page{
-    background: lightblue;
+.flex-storage{
+    display: flex;
+    width:100%;
+    list-style: none;
+    flex-direction: column-reverse;
+    justify-content: center;
+    border-top:10px;
+    border-bottom:10px;
+    border-left:0;
+    border-right:0;
+    border-color: rgb(233, 47, 47);
+    border-style:solid;    
+    
+}
+.flex-item{
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(233, 47, 47);
+    border-bottom: 10px;
+    border-color: rgb(233, 47, 47);
+    color: black;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width:100%;
+}
+
+  
+.pointinfo_pos{
+    color: white;
+    background-color: rgb(233, 47, 47);;
+    width: 50%;
+    padding-left:110px;
+    text-align: left;
+}
+.points_pos{
+    padding-top: 10px;
+    padding-left: 90px;
+    justify-content: center;
+    font-size: 35px;
+    color: aqua;
+}
+.info_pos{
+    color: white;
+    font-size: 40px;
+    width: 30%;
+    text-align: center;
+}
+  
+.flex-item img{
+    width:60%;
+}
+
+
+
+.rewardsweb_page{
+    background: purple;
     display: flex;
     flex-direction: column;
-    height: 1500px;
+    height: 650px;
 }
 
-.product_wrapper{
+.rewardsweb_wrapper{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
     align-items: center;
     justify-items: center;
-
 }
 
-.product_card{
+.rewardweb_card{
     background-color: aquamarine;
     margin: auto;
     margin-top: 50px;
     text-align: center;
-    height: 400px;
-    width: 360px;
+    height: 550px;
+    width: 500px;
     align-content: center;
+    border-radius: 50px;
 }
 
-.product_card h1{
-    margin-top: 7px;
+.rewardweb_card h1{
+    margin-top: 10px;
     height: 40px;
     font-size: 28px;
 }
 
-.product_card p{
-    margin-bottom: 10px;
+.rewardweb_card p{
+    margin-top: 10px;
     font-size: 20px;
-    height: 50px;
-    margin-top: 5px;
+    height: 35px;
 }
-.price {
-    color: grey;
-    height: 40px;
-    font-size: 29px;
-}
-  
-.product_card button {
+.rewardweb_card button {
     border: none;
     outline: 0;
     padding: 7px;
@@ -209,11 +261,87 @@
     margin: auto;
 }
   
-.product_card button:hover {
+.rewardweb_card button:hover {
     opacity: 0.7;
 }
 
-.product_card img{
+.rewardweb_card img{
+    height: 250px;
+    margin: auto;
+    width: 400px;
+    margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+.rewards_page{
+    background: lightblue;
+    display: flex;
+    flex-direction: column;
+    height: 1500px;
+}
+
+.rewards_wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr ;
+    align-items: center;
+    justify-items: center;
+
+}
+
+.reward_card{
+    background-color: aquamarine;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+    height: 400px;
+    width: 360px;
+    align-content: center;
+    
+}
+
+.reward_card h1{
+    margin-top: 7px;
+    height: 40px;
+    font-size: 28px;
+}
+
+.reward_card p{
+    margin-bottom: 10px;
+    font-size: 20px;
+    height: 30px;
+    margin-top: 5px;
+}
+.points {
+    color: black;
+    height: 40px;
+    font-size: 29px;
+}
+  
+.reward_card button {
+    border: none;
+    outline: 0;
+    padding: 7px;
+    color: white;
+    background-color: grey;
+    text-align: center;
+    cursor: pointer;
+    width: 65%;
+    font-size: 25px;
+    margin: auto;
+}
+  
+.reward_card button:hover {
+    opacity: 0.7;
+}
+
+.reward_card img{
     height: 182px;
     margin: auto;
     width: 320px;
