--- a/cart.css
+++ b/cart.css
@@ -90,6 +90,7 @@
     margin-top: 20px;
     margin-left: 30px;
     font-size: 25px;
+    font-weight: bold;
 }
 
 .remove_all{
@@ -101,39 +102,58 @@
 }
 
 .cart_item{
-    margin: auto;
+    flex-direction: row;
     display:flex;
     justify-content: space-evenly;
     margin-top: 30px;
-    align-items: center;
+    align-content: center;
+}
+
+.cart_item h1{
+    margin-top: 200px;
+    font-weight: normal;
 }
 
 .game_image img{
-    width: 300px;
-    height: 170px;
+    width: 400px;
+    height: 230px;
 }
 
-.details{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.about{
+    margin-top: 100px;
+    font-size: 30px;
+}
+
+h3{
+    font-weight: normal;
 }
 
 .counter{
+    margin-top: 100px;
     display: flex;
     justify-content: space-evenly;
+    flex-direction: row;
 }
 
 .counter p{
-    font-size: 20px;
+    font-size: 26px;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 20px;
 }
 
 .counter button{
     font-size: 15px;
     height: 20px;
     width: 15px;
+    margin-top: 7px;
 }
 
 .price{
+    margin-top: 100px;
     font-size: 25px;
+}
+
+.remove{
+    margin-top: 100px;
 }
