--- a/cart.css
+++ b/cart.css
@@ -1,38 +1,3 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.icon{
-    font-size:60px;
-    color:lightblue;
-    text-shadow:2px 2px 4px #000000;
-}
-.navbar {
-    overflow: hidden;
-    background-color: white;
-    margin:0px;
-}
-
-.navbar .block{
-    display: flex;
-}
-  
-.navbar a :hover, .block:hover .block-info:hover  { 
-    background: red;
-}
-  
-.navbar .block .block-info a{
-    float: left; 
-    font-size: 30px;
-    font-weight: bold;
-    color: black;
-    text-align: center;
-    padding: 16px 18px;
-    text-decoration: none;
-}
 
 .top_cart_page{
     background-color: lightblue;
@@ -52,13 +17,15 @@
     margin-left: 30px;
     font-size: 20px;
     border-radius: 5px;
+    flex-direction: row;
+    display: flex;
 }
 .cost p{
     margin-top: 15px;
     margin-left: 10px;
 }
 
-.pay_now button{
+.pay_now{
     height: 40px;
     width:130px;
     margin-top: 30px;
@@ -69,7 +36,8 @@
 
 .bottom_cart_page{
     background-color: lightblue;
-    height: 655px;
+    min-height: 808px;
+    height: auto;
 }
 
 .cart{
@@ -78,7 +46,9 @@
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 10px;
-    height: 635px;
+    min-height: 765px;
+    height: auto;
+    display: grid;
 }
 
 .header_wrapper{
@@ -93,20 +63,11 @@
     font-weight: bold;
 }
 
-.remove_all{
-    margin-top: 20px;
-    margin-right: 20px;
-    font-size: 15px;
-    height: 25px;
-    width: 85px;
-}
 
 .cart_item{
-    flex-direction: row;
     display:flex;
     justify-content: space-evenly;
     margin-top: 30px;
-    align-content: center;
 }
 
 .cart_item h1{
@@ -117,43 +78,39 @@
 .game_image img{
     width: 400px;
     height: 230px;
+    margin-right: 200px;
+    max-width: 400px;
 }
 
-.about{
+.title{
     margin-top: 100px;
     font-size: 30px;
+    margin-right: 200px;
 }
 
 h3{
     font-weight: normal;
 }
 
-.counter{
+
+.quantity_input{
+    height: 30px;
+    width: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
     margin-top: 100px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
+    font-size: 20px;
 }
 
-.counter p{
-    font-size: 26px;
-    margin-left: 15px;
-    margin-right: 15px;
-    width: 20px;
-}
 
-.counter button{
-    font-size: 15px;
-    height: 20px;
-    width: 15px;
-    margin-top: 7px;
-}
-
-.price{
+.cart_price{
     margin-top: 100px;
     font-size: 25px;
+    margin-right: 200px;
+    margin-left: 100px;
 }
 
 .remove{
     margin-top: 100px;
+    height: 20px;
 }
