--- a/products.css
+++ b/products.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    scroll-behavior: smooth;
 }
 
 .icon{
@@ -57,7 +58,7 @@
     grid-template-rows: 1fr 1fr 1fr ;
     align-items: center;
     justify-items: center;
-
+    
 }
 
 .product_card{
@@ -65,14 +66,14 @@
     margin: auto;
     margin-top: 50px;
     text-align: center;
-    height: 400px;
+    height: 420px;
     width: 360px;
     align-content: center;
 }
 
 .product_card h1{
     margin-top: 7px;
-    height: 40px;
+    height: 50px;
     font-size: 28px;
 }
 
