--- a/profile.css
+++ b/profile.css
@@ -17,8 +17,8 @@
     display: flex;
 }
   
-.navbar a :hover, .block:hover .block-info:hover , .block-info-right:hover, .icon-info a :hover{ 
-    background: red;
+.navbar a :hover, .block:hover .block-info:hover , .block-info-right:hover, .icon-info a :hover, .block-profile :hover{ 
+    background: lightgray;
 }
   
 .navbar .block .block-info a{
@@ -45,6 +45,18 @@
     padding: 24px 20px;
     text-decoration: none;
     padding-left: 100px;
+    cursor: pointer;
+}
+
+.navbar .block .block-profile a{     
+    display: block;
+    float: right; 
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 24px 20px;
+    text-decoration: none;
 }
 
 .icon-info{
@@ -56,7 +68,6 @@
     padding: 6px 6px;
     text-decoration: none;
 }
-
 
 
 /* Button used to open the contact form - fixed at the bottom of the page */
