--- a/products.css
+++ b/products.css
@@ -73,6 +73,83 @@
 
 
 
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 230px;
+    right: 280px;
+    width: 280px;
+  }
+  
+/* The login popup */
+.login-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    z-index: 8;
+}
+
+/*The sign up popup*/
+.signup-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    z-index: 5;
+}
+  
+
+.form-container {
+    max-width: 600px;
+    padding: 100px;
+    background-image: url(https://awcdn.hawkdive.com/media/WhatsApp-Image-2022-03-26-at-2.28.43-PM-2.jpeg);
+    justify-content: center;
+    margin-bottom: 250px;
+    margin-left: 550px;
+    color: #f1f1f1;
+}
+  
+
+.form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+  
+
+.form-container .btn {
+    background-color: rgb(26, 218, 58);
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+}
+  
+.form-container .cancel {
+    background-color: red;
+}
+  
+
+.form-container .btn:hover, .open-button:hover {
+    opacity: 100;
+}
+
+
+
+
+
 .product_page{
     background: lightblue;
     display: flex;
