Edited uneeded info and index.css working

--- a/ZProf_index.css
+++ b/ZProf_index.css
@@ -50,6 +50,17 @@
     cursor: pointer;
 }
 
+.navbar .block .block-profile a{     
+    display: block;
+    float: right; 
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 24px 20px;
+    text-decoration: none;
+}
+
 .icon-info{
     float: left; 
     font-size: 30px;
