--- a/cart.css
+++ b/cart.css
@@ -78,14 +78,13 @@
 .game_image img{
     width: 400px;
     height: 230px;
-    margin-right: 200px;
     max-width: 400px;
 }
 
 .title{
     margin-top: 100px;
-    font-size: 30px;
-    margin-right: 200px;
+    font-size: 25px;
+    width: 300px;
 }
 
 h3{
