--- a/profile.css
+++ b/profile.css
@@ -156,6 +156,7 @@
     height: 40px;
     margin-top: 35px;
     margin-left:0;
+    margin-bottom: 100px;
 }
 
 .level{
@@ -176,7 +177,7 @@
     display: flex;
     justify-content: space-between;
     background-color: blueviolet;
-    height: 300px;
+    height: 390px;
 }
 
 .perks{
@@ -188,7 +189,10 @@
 
 .table, td{
     border: 1px solid;
-    font-size: 100px;
+    font-size: 70px;
+}
+.perkinfo{
+    font-size: 30px;
 }
 
 .info_guide{
@@ -200,4 +204,66 @@
 }
 .info_guide p{
     margin: 20px;
+}
+
+
+.rewardsweb_page{
+    background: purple;
+    display: flex;
+    flex-direction: column;
+    height: 650px;
+}
+
+.rewardsweb_wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.rewardweb_card{
+    background-color: aquamarine;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+    height: 550px;
+    width: 500px;
+    align-content: center;
+    border-radius: 50px;
+}
+
+.rewardweb_card h1{
+    margin-top: 20px;
+    height: 40px;
+    font-size: 28px;
+}
+
+.rewardweb_card p{
+    margin-top: 50px;
+    font-size: 20px;
+    height: 35px;
+}
+.rewardweb_card button {
+    border: none;
+    outline: 0;
+    padding: 7px;
+    color: white;
+    background-color: grey;
+    text-align: center;
+    cursor: pointer;
+    width: 65%;
+    font-size: 25px;
+    margin: auto;
+}
+  
+.rewardweb_card button:hover {
+    opacity: 0.7;
+}
+
+.rewardweb_card img{
+    height: 250px;
+    margin: auto;
+    width: 400px;
+    margin-top: 50px;
 }
