--- a/products.css
+++ b/products.css
@@ -222,3 +222,120 @@
     width: 320px;
     margin-top: 10px;
 }
+
+/* cart.css */
+
+.top_cart_page{
+    background-color: lightblue;
+    height:100px;
+}
+
+.top_cart_wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+.cost{
+    background-color: white;
+    height: 50px;
+    width: 250px;
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    flex-direction: row;
+    display: flex;
+}
+.cost p{
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+.pay_now{
+    height: 40px;
+    width:130px;
+    margin-top: 30px;
+    margin-right: 30px;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+.bottom_cart_page{
+    background-color: lightblue;
+    min-height: 808px;
+    height: auto;
+}
+
+.cart{
+    background-color: white;
+    margin-left: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 10px;
+    min-height: 765px;
+    height: auto;
+    display: grid;
+}
+
+.header_wrapper{
+    display:flex;
+    justify-content: space-between;
+}
+
+.title{
+    margin-top: 20px;
+    margin-left: 30px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+
+.cart_item{
+    display:flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+}
+
+.cart_item h1{
+    margin-top: 200px;
+    font-weight: normal;
+}
+
+.game_image img{
+    width: 400px;
+    height: 230px;
+    max-width: 400px;
+}
+
+.title{
+    margin-top: 100px;
+    font-size: 25px;
+    width: 300px;
+}
+
+h3{
+    font-weight: normal;
+}
+
+
+.quantity_input{
+    height: 30px;
+    width: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-top: 100px;
+    font-size: 20px;
+}
+
+
+.cart_price{
+    margin-top: 100px;
+    font-size: 25px;
+    margin-right: 200px;
+    margin-left: 100px;
+}
+
+.remove{
+    margin-top: 100px;
+    height: 20px;
+}
