--- a/index.css
+++ b/index.css
@@ -146,32 +146,39 @@
     background: lightblue;
     display: flex;
     flex-direction: column;
-    height: 905px;
-    justify-content: center;
+    height: 772px;
 }
 
+
+.homepage_tab h3{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-weight: lighter;
+    text-align: center;
+}
 .homepage_tab_wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    align-items: center;
     justify-items: center;
 }
 
 .homepage_tab_card{
-    margin: 10px;
-    height: 425px;
-    width: 300px;
-    border-radius: 4px;
+    border-radius: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     text-align: center;
-    background-color: whitesmoke;
-    border-radius: 30px;
+    background-color: white;
+    margin-top: 100px;
 }
-
+.homepage_tab_card img{
+    height: 400px;
+    width: 500px;
+    border-radius: 40px;
+}
 .homepage_tab_card a{
     text-align: center;
     font-size: 30px;
