--- a/profile.css
+++ b/profile.css
@@ -69,78 +69,51 @@
     text-decoration: none;
 }
 
+.flex-storage{
+    display: flex;
+    width:100%;
+    list-style: none;
+    flex-direction: column-reverse;
+    justify-content: center;
+    border-top:10px;
+    border-bottom:10px;
+    border-left:0;
+    border-right:0;
+    border-color:darkmagenta;
+    border-style:solid;    
+    
+}
+.flex-item{
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: bolder;
+    list-style: none;
+    text-align: left;
+    background-color: rgb(70, 2, 70);
+    border-bottom: 10px;
+    border-color: rgb(70, 2, 70);
+    color: black;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width:100%;
+}
 
-/* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-    background-color: #555;
+  
+.title_pos{
     color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.8;
-    position: fixed;
-    bottom: 230px;
-    right: 280px;
-    width: 280px;
-  }
-  
-/* The login popup */
-.login-popup {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    justify-content: center;
-    z-index: 8;
+    background-color:rgb(70, 2, 70);
+    width: 60%;
+    padding-left:20px;
+    text-align: left;
 }
-
-/*The sign up popup*/
-.signup-popup {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    justify-content: center;
-    z-index: 5;
+.img_pos{
+    width: 40%;
+    text-align: center;
 }
   
-
-.form-container {
-    max-width: 600px;
-    padding: 100px;
-    background-image: url(https://awcdn.hawkdive.com/media/WhatsApp-Image-2022-03-26-at-2.28.43-PM-2.jpeg);
-    justify-content: center;
-    margin-bottom: 250px;
-    margin-left: 550px;
-    color: #f1f1f1;
-}
-  
-
-.form-container input[type=text], .form-container input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-}
-  
-
-.form-container .btn {
-    background-color: rgb(26, 218, 58);
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom:10px;
-    opacity: 0.8;
-}
-  
-.form-container .cancel {
-    background-color: red;
-}
-  
-
-.form-container .btn:hover, .open-button:hover {
-    opacity: 100;
+.flex-item img{
+    width:60%;
 }
 
 .top_rewards_page{
