--- a/products.css
+++ b/products.css
@@ -179,6 +179,7 @@
     height: 420px;
     width: 360px;
     align-content: center;
+    border-radius: 20px;
 }
 
 .product_card h1{
@@ -221,6 +222,7 @@
     margin: auto;
     width: 320px;
     margin-top: 10px;
+    border-radius: 20px;
 }
 
 /* cart.css */
