--- a/profile.css
+++ b/profile.css
@@ -131,17 +131,22 @@
     margin-left:0;
     margin-bottom: 100px;
 }
+.progress{
+    background-color: greenyellow;
+    width: 1%;
+}
 .level_container{
     display: flex;
     flex-direction: row;
-    max-height: 40px;
+    max-height: 50px;
+}
+.level_container p{
+    font-size: 30px;
 }
 .level{
-    background-color: greenyellow;
     max-height: 40px;
-    width: 9%;
+    margin-right: 15px;
     font-size: 30px;
-    text-justify: center;
     text-align: center;
 }
 
@@ -164,14 +169,24 @@
     margin-left: 30px;
     margin-bottom: 30px;
     background-color: aqua;
+    width: 950px;
 }
 
 .table, td{
     border: 1px solid;
-    font-size: 70px;
+    font-size: 60px;
+    height: 165px;
+    width: 950px;
+}
+td{
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 20px;
 }
 .perkinfo{
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: lighter;
+    padding-left: 20px;
 }
 
 .info_guide{
@@ -179,10 +194,14 @@
     margin-top:30px;
     margin-right: 30px;
     margin-bottom: 30px;
-    font-size: 20px;
+    margin-left: 50px;
+    border-radius: 20px;
 }
 .info_guide p{
     margin: 20px;
+    font-size: 23px;
+    padding-left: 40px;
+    padding-top: 10px;
 }
 
 
@@ -246,3 +265,72 @@
     width: 400px;
     margin-top: 50px;
 }
+
+/* spin the wheel */
+#wheel {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    border: 5px solid solid blue;
+    background-color: lightblue;
+    position: relative;
+    margin: 50px auto;
+}
+  
+#pointer {
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 100px solid white;
+    border-bottom: 100px solid transparent;
+    position: absolute;
+    top: 195px;
+    left: 195px;
+}
+
+#spin-button {
+    position: absolute;
+    top: 1600px;
+    left: 350px;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: lightgray;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.result{
+    border-color: black;
+    font-weight: bolder;
+    height: 30px;
+    width: 110px;
+    text-align: center;
+    position: absolute;
+    top: 1350px;
+    left: 380px;
+}
+
+/* tic tac toe */
+#board {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 10px;
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    position: absolute;
+    top: 1200px;
+    right: 400px;
+}
+  
+.square {
+    background-color: lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    cursor: pointer;
+}
+  
