--- a/rewards.css
+++ b/rewards.css
@@ -173,9 +173,9 @@
 
   
 .pointinfo_pos{
-    color: white;
+    color: black;
     background-color: #acb6e5;
-    width: 50%;
+    width: 60%;
     padding-left:110px;
     text-align: left;
     border-radius: 20px;
@@ -183,12 +183,13 @@
 .points_pos{
     padding-top: 10px;
     padding-left: 50px;
+    padding-right: 50px;
     justify-content: center;
     font-size: 35px;
-    color: aqua;
+    color: black;
 }
 .info_pos{
-    color: white;
+    color: black;
     font-size: 40px;
     width: 30%;
     text-align: center;
