--- a/products.css
+++ b/products.css
@@ -283,6 +283,7 @@
     margin-left: 20px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
     min-height: 765px;
     height: auto;
