--- a/rewards.css
+++ b/rewards.css
@@ -173,10 +173,11 @@
 
   
 .pointinfo_pos{
-    color: white;
+    color: whitesmoke;
     background-color: #acb6e5;
     width: 50%;
     padding-left:110px;
+    padding-top: 15px;
     text-align: left;
     border-radius: 20px;
 }
@@ -185,13 +186,14 @@
     padding-left: 50px;
     justify-content: center;
     font-size: 35px;
-    color: aqua;
+    color: orangered;
 }
 .info_pos{
-    color: white;
+    color: whitesmoke;
     font-size: 40px;
-    width: 30%;
+    width: 35%;
     text-align: center;
+    padding-left: 80px;
 }
   
 .flex-item img{
