--- a/ZProf_rewards.css
+++ b/ZProf_rewards.css
@@ -38,6 +38,18 @@
     padding-right:200px ;
 }
 
+.navbar .block .block-info-right a{     
+    float: left; 
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 24px 20px;
+    text-decoration: none;
+    padding-left: 100px;
+    cursor: pointer;
+}
+
 .navbar .block .block-profile a{     
     display: block;
     float: right; 
@@ -49,6 +61,7 @@
     text-decoration: none;
 }
 
+
 .icon-info{
     float: left; 
     font-size: 30px;
@@ -58,6 +71,83 @@
     padding: 6px 6px;
     text-decoration: none;
 }
+
+
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 230px;
+    right: 280px;
+    width: 280px;
+  }
+  
+/* The login popup */
+.login-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    z-index: 8;
+}
+
+/*The sign up popup*/
+.signup-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    z-index: 5;
+}
+  
+
+.form-container {
+    max-width: 600px;
+    padding: 100px;
+    background-image: url(https://awcdn.hawkdive.com/media/WhatsApp-Image-2022-03-26-at-2.28.43-PM-2.jpeg);
+    justify-content: center;
+    margin-bottom: 250px;
+    margin-left: 550px;
+    color: #f1f1f1;
+}
+  
+
+.form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+  
+
+.form-container .btn {
+    background-color: rgb(26, 218, 58);
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+}
+  
+.form-container .cancel {
+    background-color: red;
+}
+  
+
+.form-container .btn:hover, .open-button:hover {
+    opacity: 100;
+}
+
+
 
 
 
@@ -99,7 +189,9 @@
     background-color: #acb6e5;
     width: 60%;
     padding-left:110px;
+    padding-top: 15px;
     text-align: left;
+    border-radius: 20px;
 }
 .points_pos{
     padding-top: 10px;
@@ -107,13 +199,14 @@
     padding-right: 50px;
     justify-content: center;
     font-size: 35px;
-    color: black;
+    color: orangered;
 }
 .info_pos{
     color: black;
     font-size: 40px;
-    width: 30%;
+    width: 35%;
     text-align: center;
+    padding-left: 80px;
 }
   
 .flex-item img{
