--- a/Zprof_products.css
+++ b/Zprof_products.css
@@ -49,6 +49,18 @@
     cursor: pointer;
 }
 
+.navbar .block .block-profile a{     
+    display: block;
+    float: right; 
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    padding: 24px 20px;
+    text-decoration: none;
+}
+
+
 .icon-info{
     float: left; 
     font-size: 30px;
