--- a/rewards.css
+++ b/rewards.css
@@ -173,7 +173,7 @@
 
   
 .pointinfo_pos{
-    color: whitesmoke;
+    color: black;
     background-color: #acb6e5;
     width: 60%;
     padding-left:110px;
@@ -190,7 +190,7 @@
     color: orangered;
 }
 .info_pos{
-    color: whitesmoke;
+    color: black;
     font-size: 40px;
     width: 35%;
     text-align: center;
